.kubernetes/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: m2a-frontend
  labels:
    name: m2a-frontend
