.kubernetes/01-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: m2a-frontend
  name: m2a-frontend-deployment
  labels:
    app: m2a-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: m2a-frontend
  template:
    metadata:
      labels:
        app: m2a-frontend
    spec:
      containers:
      - name: m2a-frontend
        image: $image_name
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: secret-dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  namespace: m2a-frontend
  name: m2a-frontend-service
spec:
  selector:
    app.kubernetes.io/name: m2a-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
