.kubernetes/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m2a-frontend-ingress
  namespace: m2a-frontend

spec:
  rules:
    - host: m2a.jaipasraisonla.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: m2a-frontend
                port:
                  name: web
